# Silicon_Chess

./: .gitignore  Cargo.toml  Dockerfile  README.md
Board/: BitBoard.rs  ChessBoard.rs  MagicBits.rs  MoveGenerator.rs
Net/: Train_weights.py  deit_style.py
Search/: mcts.rs  model_bind.rs
State/: GameState.rs
benches/: bitboard_benchmarks.rs
notebooks/: lichess_puzzle_eda.ipynb
src/Board/: BitBoardChannels.rs  BitBoardFast.rs  BitBoardMask.rs  BitBoardTensor.rs  ChessBoard.rs  DeepmindTokenizer.rs  MoveGenerator.rs  ZobristGo.rs  ZobristHash.rs
src/DataGen/: 7plane_better.rs  7plane_encoder.rs  Dataset.rs  lichess_download.rs  parallel_data_processing.rs  puzzle_eval.rs
src/Net/: anticipation.py  c_jepa.py  c_jepa_training.py  chartUtils.js  chess_analysis_visualization.js  chess_vector_db.py  chiera_modeling.py  chiera_processor.py  deit_config.py  deit_zero.py  distilled_train.py  ibot_chess.py  jepa_test.ipynb  mu_zero_agent.py  policy_distillation.py  push_to_hf.py  q_agent_deit.py  q_agent_tf.py  q_agent_torch.py  self_supervised.py
src/Search/: agent.rs  mcts.rs  mu_agent.rs  rusty_agent.rs
src/Serve/: apis.rs  server.rs  socket.rs
src/Simulate/: experience_collector.rs  prediction_agent.rs  tournament_simulation.rs  zero_agent.rs
src/State/: GameState.rs  fischer_random.rs
src/Util/: elo.rs
src/Visualize/: monitor.rs
tests/: agent_tests.rs  bitboard_interactions.rs  bitboard_speed.rs  c_jepa_tests.py  mu_agent_tests.rs
