[package]
name = "Silicon_Chess"
version = "0.0.0"
authors = ["simonk <simonkotchou@mines.edu>"]
license = "MIT"
edition = "2018"

[dependencies]
rayon = "1.5.1"
tch = "0.6.0"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.3"
rand = "0.8.4"
argmin = "0.4"

[dev-dependencies]
criterion = "0.3"